# splinepy

./: .buildinfo  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  CMakeLists.txt  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  api_reference.html  genindex.html  index.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  python_api.html  search.html  searchindex.js  setup.cfg  setup.py  spline_intro.html
cpp/splinepy/: CMakeLists.txt
cpp/splinepy/explicit/: CMakeLists.txt
cpp/splinepy/explicit/bezman/: bezier_explicit.cpp  bezier_explicit1.cpp  bezier_explicit10.cpp  bezier_explicit2.cpp  bezier_explicit3.cpp  bezier_explicit4.cpp  bezier_explicit5.cpp  bezier_explicit6.cpp  bezier_explicit7.cpp  bezier_explicit8.cpp  bezier_explicit9.cpp  bezier_extern.hpp  rational_bezier_explicit.cpp  rational_bezier_explicit1.cpp  rational_bezier_explicit10.cpp  rational_bezier_explicit2.cpp  rational_bezier_explicit3.cpp  rational_bezier_explicit4.cpp  rational_bezier_explicit5.cpp  rational_bezier_explicit6.cpp  (+4 more)
cpp/splinepy/fitting/: CMakeLists.txt  fitting.cpp  fitting.hpp  lu_solve.hpp  utils.hpp
cpp/splinepy/proximity/: proximity.hpp
cpp/splinepy/py/: CMakeLists.txt  bezier.hpp  bspline.hpp  nurbs.hpp  py_bezier.hpp  py_bspline.hpp  py_coordinate_pointers.hpp  py_coordinate_references.hpp  py_fitting.hpp  py_interfaces.hpp  py_knot_insertion_matrix.hpp  py_knot_vector.hpp  py_multi_patch.hpp  py_nurbs.hpp  py_rational_bezier.hpp  py_spline.hpp  py_spline_exporter.hpp  py_spline_extensions.hpp  py_spline_list.hpp  py_spline_reader.hpp  py_uffpy.hpp  spline_exporter.hpp  spline_reader.hpp  splinepy.cpp  splinepy_core.cpp
cpp/splinepy/splines/: .splinepy_base.hpp.swp  bezier.hpp  bezier.inl  bspline.hpp  create_bezier.cpp  create_bspline.cpp  create_nurbs.cpp  create_rational_bezier.cpp  helpers.hpp  null_spline.hpp  nurbs.hpp  rational_bezier.hpp  rational_bezier.inl  splinepy_base.cpp  splinepy_base.hpp  splinepy_create.cpp  type_identifier.hpp
cpp/splinepy/third_party_explicit/: CMakeLists.txt
cpp/splinepy/utils/: arrays.hpp  coordinate_pointers.cpp  coordinate_pointers.hpp  default_initialization_allocator.hpp  grid_points.hpp  nthreads.hpp  print.hpp  reference.hpp
src/: .rational_bezier.hpp.swp  CMakeLists.txt  bezier.hpp  bspline.hpp  helpers.hpp  nurbs.hpp  rational_bezier.hpp  spline_reader.hpp  splinelib.cpp  splinepy.cpp
src/explicit/: CMakeLists.txt
src/explicit/bezman/: bezier_explicit1.cpp  bezier_explicit10.cpp  bezier_explicit2.cpp  bezier_explicit3.cpp  bezier_explicit4.cpp  bezier_explicit5.cpp  bezier_explicit6.cpp  bezier_explicit7.cpp  bezier_explicit8.cpp  bezier_explicit9.cpp  point.cpp  rational_bezier_explicit1.cpp  rational_bezier_explicit10.cpp  rational_bezier_explicit2.cpp  rational_bezier_explicit3.cpp  rational_bezier_explicit4.cpp  rational_bezier_explicit5.cpp  rational_bezier_explicit6.cpp  rational_bezier_explicit7.cpp  rational_bezier_explicit8.cpp  rational_bezier_explicit9.cpp
src/explicit/bsplinelib/: b_spline_explicit1.cpp  b_spline_explicit10.cpp  b_spline_explicit2.cpp  b_spline_explicit3.cpp  b_spline_explicit4.cpp  b_spline_explicit5.cpp  b_spline_explicit6.cpp  b_spline_explicit7.cpp  b_spline_explicit8.cpp  b_spline_explicit9.cpp  nurbs_explicit1.cpp  nurbs_explicit10.cpp  nurbs_explicit2.cpp  nurbs_explicit3.cpp  nurbs_explicit4.cpp  nurbs_explicit5.cpp  nurbs_explicit6.cpp  nurbs_explicit7.cpp  nurbs_explicit8.cpp  nurbs_explicit9.cpp  parameter_space.cpp  vector_space.cpp  weighted_vector_space.cpp
src/explicit/splinepy/: bezier_explicit1.cpp  bezier_explicit10.cpp  bezier_explicit2.cpp  bezier_explicit3.cpp  bezier_explicit4.cpp  bezier_explicit5.cpp  bezier_explicit6.cpp  bezier_explicit7.cpp  bezier_explicit8.cpp  bezier_explicit9.cpp  bspline_explicit.cpp  bspline_explicit1.cpp  bspline_explicit10.cpp  bspline_explicit3.cpp  bspline_explicit5.cpp  bspline_explicit8.cpp  nurbs_explicit.cpp  nurbs_explicit3.cpp  nurbs_explicit4.cpp  nurbs_explicit5.cpp  nurbs_explicit6.cpp  nurbs_explicit7.cpp  nurbs_explicit9.cpp  rational_bezier_explicit1.cpp  rational_bezier_explicit10.cpp  rational_bezier_explicit2.cpp  rational_bezier_explicit3.cpp  rational_bezier_explicit4.cpp  rational_bezier_explicit5.cpp  rational_bezier_explicit6.cpp  rational_bezier_explicit7.cpp  rational_bezier_explicit8.cpp  rational_bezier_explicit9.cpp
src/fitting/: CMakeLists.txt  fitting.cpp  fitting.hpp  lu_solve.cpp  utils.cpp  utils.hpp
src/proximity/: proximity.cpp  proximity.hpp
src/proximity/slsqp/: slsqp.c  slsqp.f
src/py/: CMakeLists.txt  py_coordinate_pointers.cpp  py_fitting.cpp  py_knot_insertion_matrix.cpp  py_knot_vector.cpp  py_multi_patch.cpp  py_multipatch.cpp  py_parameter_space.cpp  py_spline.cpp  py_spline_exporter.cpp  py_spline_extensions.cpp  py_spline_reader.cpp  py_spline_scene.cpp  splinepy_core.cpp
src/python/: bezier1.cpp  bezier5.cpp  bezier6.cpp  bezier7.cpp  bspline10.cpp  bspline2.cpp  bspline3.cpp  bspline8.cpp  bspline9.cpp  minimal.cpp  nurbs1.cpp  nurbs10.cpp  nurbs5.cpp  nurbs6.cpp  reader.cpp
src/python/init/: bezier3.cpp  bezier4.cpp  bezier8.cpp  bezier9.cpp  nurbs4.cpp  nurbs7.cpp
src/splinelib_ext/: arrutils.hpp  bspl.hpp  nurbspl.hpp  proximity.hpp
src/splines/: bspl.hpp  bspline.hpp  helpers.hpp  splinepy_base.cpp  splinepy_bezier.cpp  splinepy_bspline.cpp  splinepy_rational.cpp
src/splines/create/: bezier1.cpp  bezier10.cpp  bezier2.cpp  bezier3.cpp  bezier4.cpp  bezier5.cpp  bezier6.cpp  bezier7.cpp  bezier8.cpp  bezier9.cpp  bspline2.cpp  bspline3.cpp  bspline8.cpp  bspline9.cpp  nurbs3.cpp  nurbs8.cpp  rational_bezier1.cpp  rational_bezier10.cpp  rational_bezier2.cpp  rational_bezier3.cpp  rational_bezier4.cpp  rational_bezier5.cpp  rational_bezier6.cpp  rational_bezier7.cpp  rational_bezier8.cpp  rational_bezier9.cpp
src/splines/helpers/: batched_queries.cpp  extract.cpp
src/utils/: arrays.hpp  coordinate_pointers.cpp  grid_points.hpp
src/xns/: CMakeLists.txt  data.hpp  splinepy_scene.cpp  splinepy_scene.f90
(+3752 files in other folders)
