[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.16",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-extras = ["test"]
test-command = "python -m unittest discover {project}/tests -v"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
test-skip = ["*arm64"]
build = ["cp*"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
build = ["cp*-many*"]

[tool.cibuildwheel.windows]
skip = "pp*"

[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "PL",          # pylint
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "NPY",         # numpy specific rules
]
fixable = ["ALL"]
target-version = "py37"
ignore = [
    "PLR2004", # TODO!
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0915", # Too many statements
    "B904", # Within an `except` clause, raise exceptions with ...
    "PLR0911", # Too many return statements
]

[tool.ruff.per-file-ignores]
"setup.py" = ["T201"]
"examples/*.py" = ["T201"]
"tests/common.py" = ["T201"]
